Fix info block spacing issue and finalize remainder of CSS

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 .header-content, .hero-content, .info-content, .quote-content, .cta-content {
     display:flex;
     flex:0 1 auto;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -30,28 +30,37 @@ h1 {
     font-size: 48px;
     font-weight: 1000;
     color:#f9faf8;
+    margin:0px 0px 20px 0px;
 }
 
 h2 {
     font-size: 38px;
     font-weight: 1000;
     color: #1f2937;
+    text-align: center;
+}
+
+p {
+    margin:20px 0px;
 }
 
 button {
     background-color: #3882f6;
     color: #f9faf8;
     padding: 8px 40px;
+    border-width: 0px;
+    border-radius: 5px;
 }
 
 .header-content {
-    padding:30px;
+    padding:0px 30px;
     align-items: center;
     justify-content: space-between;
 }
 
 .logo img {
     width:150px;
+    padding: 20px 0px;
 }
 
 .nav-links ul {
@@ -75,10 +84,8 @@ button {
 }
 
 .hero-text {
-    margin-right:40px;
+    max-width:500px;
 }
-
-
 
 .hero-image {
     display:flex;
@@ -91,19 +98,17 @@ button {
     flex:none;
 }
 
-
 .info-content {
     flex-direction: column;
-    align-items: center;
     padding:50px 0px;
 }
 
 .info-card-grid {
     display:flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    gap: 30px;
+    max-width:1000px;
 }
 
 .card-img {
@@ -123,11 +128,68 @@ button {
     width:150px;
 }
 
+.quote-content {
+    flex-direction: column;
+    padding: 100px 0px;
+}
+
+.quote-author {
+    align-self: flex-end;
+    font-weight: bold;
+}
 
 .quote {
     font-size: 36px;
     font-style: italic;
-    font-weight: 300;
+    font-weight: 100;
     color: #1f2937;
 }
+
+.cta-content {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0px;
+}
+
+.secondary-cta-box {
+    width:1100px;
+    height: 100px;
+    background-color: #3882f6;
+    border:1px solid #3882f6;
+    border-radius: 10px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0px 100px;
+    color: #e5e7eb;
+}
+
+.secondary-cta-header {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.secondary-cta-button {
+    border:2px solid #f9faf8;
+    font-weight: 600;
+    display:flex;
+    flex: none;
+}
+
+.secondary-cta-button button {
+    font-weight: 600;
+}
+
+.footer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding:20px 0px;
+}
+
+.footer-text {
+    color:#f9faf8;
+}
+
 
